--- a/form-request.html
+++ b/form-request.html
@@ -4,57 +4,26 @@
 <meta charset="UTF-8">
 <title id="page-title">REQUEST LIBUR / CUTI BULAN DEPAN</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.css">
-
 <style>
-body{
-  font-family:'Segoe UI',sans-serif;margin:0;padding:20px;
-  display:flex;justify-content:center;align-items:center;min-height:100vh;
-  background:linear-gradient(135deg,#74ebd5,#ACB6E5);
-}
-.container{
-  width:480px;max-width:100%;background:#fff;padding:35px 30px 45px;
-  border-radius:18px;box-shadow:0 12px 30px rgba(0,0,0,0.15);
-  animation:fadeIn .5s;
-}
-h2{
-  text-align:center;margin-bottom:8px;font-size:23px;
-  background:linear-gradient(90deg,#4e54c8,#8f94fb);
-  -webkit-background-clip:text;-webkit-text-fill-color:transparent;
-}
-#info-text{
-  text-align:center;padding:12px;border-radius:10px;margin-bottom:20px;
-  font-size:14px;background:#f0f4ff;border:1px solid #d2dbff;font-weight:600;
-}
-label{font-size:14px;font-weight:600;margin-bottom:6px;display:block;color:#444}
-input,select{
-  width:100%;padding:12px;border:1px solid #ddd;border-radius:10px;
-  margin-bottom:15px;font-size:14px;background:#fafafa;
-}
-button{
-  padding:14px;width:100%;background:linear-gradient(90deg,#11998e,#38ef7d);
-  border:none;border-radius:12px;color:#fff;font-size:15px;font-weight:600;
-  cursor:pointer;transition:.2s;
-}
-button:hover{transform:translateY(-2px)}
-#status{
-  margin-top:15px;font-size:13px;text-align:center;padding:6px;border-radius:8px;
-}
-.success{background:#d4edda;color:#155724;border:1px solid #b7dfb9}
-.error{background:#f8d7da;color:#842029;border:1px solid #f1b0b7}
-#countdown{text-align:center;margin-top:10px;font-weight:600;font-size:14px}
-#loading{text-align:center;font-weight:600;margin-top:10px}
-@keyframes fadeIn{from{opacity:0;transform:translateY(-10px)}to{opacity:1}}
+/* (sama seperti style Anda, dipersingkat) */
+body{font-family:Segoe UI,Arial,sans-serif;margin:0;padding:20px;display:flex;justify-content:center;align-items:center;min-height:100vh;background:linear-gradient(135deg,#74ebd5,#ACB6E5)}
+.container{width:480px;max-width:100%;background:#fff;padding:35px;border-radius:18px;box-shadow:0 12px 30px rgba(0,0,0,.15)}
+h2{text-align:center;margin-bottom:8px}
+label{display:block;margin-bottom:6px;font-weight:600}
+input,select{width:100%;padding:12px;border-radius:10px;border:1px solid #ddd;margin-bottom:12px;background:#fafafa}
+button{width:100%;padding:14px;border:none;border-radius:12px;background:linear-gradient(90deg,#11998e,#38ef7d);color:#fff;font-weight:700}
+#status{margin-top:12px;padding:8px;border-radius:8px;font-size:13px}
+.success{background:#d4edda;color:#155724}
+.error{background:#f8d7da;color:#842029}
+#countdown{margin-top:10px;font-weight:700}
+#loading{margin-top:10px;font-weight:700}
 </style>
 </head>
 <body>
-
 <div class="container">
   <h2 id="header-text">REQUEST LIBUR / CUTI</h2>
 
-  <div id="info-text">
-    Silakan isi request sesuai kebutuhan.  
-    Input bisa direvisi kapan saja, gunakan dengan bijak.
-  </div>
+  <div id="info-text">Isi request sesuai kebutuhan. Input bisa direvisi.</div>
 
   <div id="loading">⏳ Memuat data...</div>
 
@@ -94,46 +63,49 @@ button:hover{transform:translateY(-2px)}
 
 <script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
 <script>
-/* ===================== CONFIG ===================== */
+/* ============ CONFIG ============ */
+/* PENTING: sesuaikan URL ini dengan web app Page-2 Anda jika berbeda */
 const scriptURL = "https://script.google.com/macros/s/AKfycbw-WhLaIfYV-Bw9461SlQ0quebn0zjeejj5E-U2LL9eNgWXE8-RZqtGrso2elTRI1Yz4w/exec";
 const MAX_LIBUR = 9;
-
-/* USER BYPASS FLAG */
 let userBypass = false;
 
-/* ===================== GET NIK FROM URL ===================== */
+/* ============ READ NIK ============ */
 const qs = new URLSearchParams(location.search);
-const nik = qs.get("nik") || "";
+const nik = (qs.get("nik") || "").trim();
 document.getElementById("nik").value = nik;
 
-/* ===================== DATE HELPERS ===================== */
+/* ============ HELPERS ============ */
 function toDates(str){
   if(!str) return [];
   return str.split(",").map(s=>{
-    let [d,m]=s.trim().split("-").map(Number);
-    return new Date(new Date().getFullYear(),m-1,d);
+    const [d,m] = s.trim().split("-").map(Number);
+    if(!d || !m) return null;
+    return new Date(new Date().getFullYear(), m-1, d);
+  }).filter(Boolean);
+}
+function safeInitPicker(selector, disabledDates, pre){
+  const el = document.querySelector(selector);
+  try {
+    if (el && el._adp) el._adp.destroy();
+  } catch(e){}
+  new AirDatepicker(selector, {
+    multipleDates: true,
+    selectedDates: toDates(pre),
+    disabledDates: disabledDates || [],
+    dateFormat: "d-MM",
+    multipleDatesSeparator: ", "
   });
 }
-
-/* ===================== INIT DATEPICKER ===================== */
-function initPicker(id, disabled, pre){
-  if(document.querySelector(id)._adp)
-    document.querySelector(id)._adp.destroy();
-
-  new AirDatepicker(id,{
-    multipleDates:true,
-    selectedDates:toDates(pre),
-    disabledDates:disabled,
-    dateFormat:"d-MM",
-    multipleDatesSeparator:", ",
-    autoClose:false
-  });
+function setStatus(text, type){
+  const s = document.getElementById("status");
+  s.textContent = text || "";
+  s.className = type ? (type === "ok" ? "success" : "error") : "";
 }
 
-/* ===================== TIMER ===================== */
+/* ============ TIMER ============ */
 function startCountdown(){
   const form = document.getElementById("requestForm");
-  const cd   = document.getElementById("countdown");
+  const cd = document.getElementById("countdown");
 
   if(userBypass){
     cd.textContent = "✅ Anda memiliki akses bypass — Timer dinonaktifkan.";
@@ -142,18 +114,18 @@ function startCountdown(){
   }
 
   const now = new Date();
-  const openDate  = new Date(now.getFullYear(),now.getMonth(),1,0,10,0);
-  const closeDate = new Date(now.getFullYear(),now.getMonth(),16,23,59,59);
+  const openDate  = new Date(now.getFullYear(), now.getMonth(), 1, 0, 10, 0);
+  const closeDate = new Date(now.getFullYear(), now.getMonth(), 16, 23, 59, 59);
 
   function tick(){
-    let t = new Date();
+    const t = new Date();
     if(t < openDate){
       form.querySelectorAll("input,select,button").forEach(el=>el.disabled=true);
       cd.textContent = "⏳ Belum dibuka.";
-    }else if(t > closeDate){
+    } else if (t > closeDate){
       form.querySelectorAll("input,select,button").forEach(el=>el.disabled=true);
       cd.textContent = "⏰ Waktu request sudah berakhir.";
-    }else{
+    } else {
       form.querySelectorAll("input,select,button").forEach(el=>el.disabled=false);
       cd.textContent = "";
     }
@@ -162,80 +134,109 @@ function startCountdown(){
   setInterval(tick,1000);
 }
 
-/* ===================== BOOT ===================== */
-(async function(){
+/* ============ BOOT ============ */
+(async function boot(){
   const loading = document.getElementById("loading");
-  const form    = document.getElementById("requestForm");
+  const form = document.getElementById("requestForm");
 
-  if(!nik){ loading.textContent="❌ NIK tidak ditemukan."; return; }
+  if(!nik){
+    loading.textContent = "❌ NIK tidak ditemukan pada URL. Pastikan parameter ?nik=... ada.";
+    return;
+  }
 
   try{
-    const res = await fetch(`${scriptURL}?nik=${nik}`);
+    // 1) Prefill data for this NIK
+    const res = await fetch(`${scriptURL}?nik=${encodeURIComponent(nik)}`);
     const data = await res.json();
 
-    document.getElementById("nama").value     = data.nama || "";
-    document.getElementById("group").value    = data.group || "";
-    document.getElementById("libur").value    = data.libur || "";
-    document.getElementById("cuti").value     = data.cuti || "";
-    document.getElementById("requestLainnya").value = data.requestLainnya || "";
-    document.getElementById("ekstrakulikuler").value = data.ekstrakulikuler || "";
+    // DEBUG: tampilkan raw response kecil (hapus/komentari setelah fix)
+    // setStatus("DEBUG: " + JSON.stringify(data), "ok");
 
-    /* READ BYPASS */
-    userBypass = !!data.bypass;
+    // Pastikan kita menerima object dengan field nama/group (jika ditemukan)
+    if (data && typeof data === "object") {
+      // If API returns status: "found" with nested data
+      if (data.status === "found" && data.data) {
+        const d = data.data;
+        document.getElementById("nama").value = d.nama || "";
+        document.getElementById("group").value = d.group || "";
+        userBypass = !!d.bypass;
+      } else {
+        // If API returns flat object (older format)
+        document.getElementById("nama").value = data.nama || "";
+        document.getElementById("group").value = data.group || "";
+        userBypass = !!data.bypass;
+      }
+    } else {
+      // unexpected response
+      setStatus("❌ Respon server tidak sesuai. Periksa scriptURL / doGet().", "err");
+      loading.textContent = "";
+      return;
+    }
 
-    /* load disabled days */
+    // 2) get fullDays (disable dates) — scriptURL without nik returns list of fullDays
     const res2 = await fetch(scriptURL);
     const fullDays = await res2.json();
-    const disabledDates = fullDays.map(d =>
-      new Date(new Date().getFullYear(), new Date().getMonth()+1, d)
-    );
+    let disabledDates = [];
+    if (Array.isArray(fullDays)) {
+      const nextMonth = new Date(new Date().getFullYear(), new Date().getMonth()+1, 1);
+      disabledDates = fullDays.map(d => new Date(nextMonth.getFullYear(), nextMonth.getMonth(), Number(d)));
+    }
 
-    initPicker("#libur", disabledDates, data.libur);
-    initPicker("#cuti", disabledDates, data.cuti);
+    // 3) init pickers with prefilled values (if any)
+    // Detect prefilled libur/cuti from either data.data or flat object
+    const preLibur = (data.data && data.data.libur) ? data.data.libur : (data.libur || "");
+    const preCuti  = (data.data && data.data.cuti)  ? data.data.cuti  : (data.cuti  || "");
 
-    loading.style.display="none";
-    form.style.display="block";
+    safeInitPicker("#libur", disabledDates, preLibur);
+    safeInitPicker("#cuti", disabledDates, preCuti);
 
+    // 4) show form and start timer (timer checks userBypass)
+    loading.style.display = "none";
+    form.style.display = "block";
     startCountdown();
-  }catch(e){
-    loading.textContent="❌ Error: "+e.message;
+
+    // If bypass true, show explicit indicator
+    if (userBypass) {
+      setStatus("✅ BYPASS: akses khusus aktif. Anda dapat mengirim request sekarang.", "ok");
+    } else {
+      setStatus("Informasi: jika Anda tidak dapat mengisi, hubungi admin.", null);
+    }
+
+  } catch (err) {
+    loading.textContent = "❌ Gagal memuat data: " + (err.message || err);
+    console.error(err);
   }
 })();
-
-/* ===================== SUBMIT ===================== */
-document.getElementById("requestForm").addEventListener("submit", async e=>{
+  
+/* ============ SUBMIT ============ */
+document.getElementById("requestForm").addEventListener("submit", async function(e){
   e.preventDefault();
-  const st = document.getElementById("status");
-  st.textContent="⏳ Mengirim..."; st.className="";
+  setStatus("⏳ Mengirim...", null);
 
+  // prepare form data
   const fd = new FormData();
   fd.append("nik", document.getElementById("nik").value);
   fd.append("nama", document.getElementById("nama").value);
-  fd.append("group",document.getElementById("group").value);
-  fd.append("libur",document.getElementById("libur").value);
+  fd.append("group", document.getElementById("group").value);
+  fd.append("libur", document.getElementById("libur").value);
   fd.append("cuti", document.getElementById("cuti").value);
-  fd.append("requestLainnya",document.getElementById("requestLainnya").value);
-  fd.append("ekstrakulikuler",document.getElementById("ekstrakulikuler").value);
-  fd.append("return","json");
+  fd.append("requestLainnya", document.getElementById("requestLainnya").value);
+  fd.append("ekstrakulikuler", document.getElementById("ekstrakulikuler").value);
+  fd.append("return", "json");
 
   try{
-    const res = await fetch(scriptURL,{method:"POST",body:fd});
+    const res = await fetch(scriptURL, { method: "POST", body: fd });
     const json = await res.json();
-
-    if(json.status==="success"){
-      st.textContent=json.message;
-      st.className="success";
-    }else{
-      st.textContent=json.message || "Gagal.";
-      st.className="error";
+    if (json && json.status === "success") {
+      setStatus(json.message || "✅ Sukses", "ok");
+    } else {
+      setStatus(json.message || "❌ Gagal mengirim", "err");
     }
-  }catch(e){
-    st.textContent="❌ Error mengirim: "+e.message;
-    st.className="error";
+  } catch (err) {
+    setStatus("❌ Error mengirim: " + (err.message || err), "err");
+    console.error(err);
   }
 });
 </script>
-
 </body>
 </html>
-
